--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "khuram",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "mongodb": "^2.2.28"
+    "express-session": "^1.15.3",
+    "mongodb": "^2.2.28",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
